--- a/styles/main.css
+++ b/styles/main.css
@@ -1,220 +1,13 @@
-*{
-    box-sizing:border-box;
+:root{
+    --purple: rgb(221, 141, 221)
 }
-*::-webkit-scrollbar{
-    display: none;
-}
-body {
-    overflow-x: hidden;
-}
-
-        /* NAV BAR */
-
-
-header{
-    z-index:12;
-    font-size: 1.3rem;
-    font-family: bebas neue;
-    background-color: rgba(255, 255, 255, 0);
-    opacity: 0.9;
-
-    display: flex;
-    align-content: center;
-    justify-content: space-between;
-    position:fixed;
-
-    width: 100%;
-    padding: 20px 15%;
-}
-header > img, a > img{
-    width: 45px;
-    height: 42px;
-}
-.top-image{
-    height:41px;
-    z-index:-1;
-    opacity: 1;
-    position:absolute;
-}
-header > a > img:hover{
-    opacity: 0;
-}
-header > nav > ul > li{
-    display:inline-block;
-    padding: 0px 15px;
-}
-header > a, nav > ul > li > a{
-    color:#f5efe7;
-    background:none;
-}
-header > a:hover , nav > ul > li > a:hover{
-    color:#f6bb38;
-    background:none;
-}
-@media screen and (max-width:900px){
-    *{
-        padding: 0px;
-    }
-    header{
-        justify-content: start;
-        align-items: center;
-        position:fixed;
-        /* background-color: #133d4c; */
-        padding: 15px;
-        font-size: 2.5vw;
-    }
-    nav{
-        padding: 0px;
-    }
-    header > nav > ul > li{
-        padding: 0 1.5vh;
-    }
-    header > nav > ul{
-        padding: 0 1vh;
-    }
-    .text-full, footer, h3{
-        margin-left:-8%;
-    }
-}
-
-        /* BODY */
-
 
 body{
-    background-color:#000000;
-    color:#f5efe7;
-}
-.yelly{
-    color:#f6bb38;
-    font-weight:500;
-}
-h1{
-    font-family: montserrat;
-    font-size: 6vw;
-    font-weight: 300;
-}
-.poster-grid{
-    /* background-color: #f6bb38; */
-    padding: 10vh 0;
-    width: 100vw;
-    /* background-color: #070707; */
-}
-.album-1{
-    --_gap: 2%;
-    display:grid;
-    grid-auto-flow: column;
-    grid-auto-columns: 30%;
-    align-items: center;
-    justify-content: end;
-    width: 100vw;
-    animation: horizontal-scroll-1;
-    animation-timeline: view(-150rem 0rem);
-}
-.album-2{
-    --_gap: 2%;
-    display:grid;
-    padding: var(--_gap) 0;
-    grid-auto-flow: column;
-    grid-auto-columns: 45%;
-    align-items: center;
-    width: 100vw;
-    animation: horizontal-scroll-2;
-    animation-timeline: view(-150rem 0rem);
-}
-h3{
-    padding: 3% 15%;
-    padding-bottom: 10vh;
-    font-family: montserrat;
-    font-weight: 700; 
-    font-size: 4vw;
-}
-.album-1 > img, .album-2 > img{
-    width: 100%;
-    object-fit: cover;
-}
-@keyframes horizontal-scroll-1{
-    to{
-        transform: translateX(105%);
-    }
-}
-@keyframes horizontal-scroll-2{
-    to{
-        transform: translateX(-105%);
-    }
-}
-.text-full{
-    padding: 10% 15%;
-    padding-top: 28vh;
-}
-a{
-    text-decoration: none;
+    background-color: black;
 }
 
-        /* FOOTER */
-
-
-footer{
-    display: flex;
-    justify-content: space-between;
-    font-family: montserrat;
-    font-size: 2.5vh;
-    padding: 4% 15%;
-    background-color:#070707;
-    font-weight:200;
-    color:#f5efe7;
+.bar-div{
+    border: 3px solid var(--purple);
+    width: 80%;
+    margin: 15px auto;
 }
-footer>p, footer,a{
-    font-size:2.5vw
-}
-.text-1{
-    line-height: 1.5; 
-    font-weight: 300; 
-    padding-right: 2em; 
-    text-align: right; 
-    font-size: 2.5vw;
-}
-.text-2{
-    font-size: 3.5vw;
-}
-footer>a, h3>a{
-    color:#f5efe7;
-}
-footer>a:hover, h3>a:hover{
-    color:#f6bb38;
-}
-footer>a:visited, h3>a:visited{
-    color:#ff0000;
-}
-
-        /* BORDER AND FILL FOR TESTING */
-
-
-/* .carousel > img{
-    border:5px solid red;
-}
-.poster-grid{
-    background-color: purple;
-    border:5px solid blue;
-}
-.carousel{
-    border:5px solid green;
-} */
-
-/* .carousel{
-    --_gap: 1%;
-    display:grid;
-    padding: 0 var(--_gap);
-    grid-gap: var(--_gap);
-    grid-auto-flow: column;
-    grid-auto-columns: 30%;
-    overflow-x:auto;
-    align-items: center;
-
-    animation: horizontal-scroll;
-    animation-timeline: scroll();
-}
-.carousel > img{
-    width: 100%;
-    object-fit: cover;
-    border-radius: 1.5%;
-} */
